--- a/src/Kingo/ExceptionMessages.resx
+++ b/src/Kingo/ExceptionMessages.resx
@@ -279,4 +279,7 @@
   <data name="SnapshotOrEvent_RestoreNotSupported" xml:space="preserve">
     <value>'{0}' cannot be used to restore an aggregate.</value>
   </data>
+  <data name="UnitOfWork_EnlistmentTimeout" xml:space="preserve">
+    <value>The operation to enlist to the current unit of work (as a result of modification of aggregate of type '{0}'), was aborted because execution time exceeded the specified timeout ({1}).</value>
+  </data>
 </root>
