--- a/src/Kingo.MicroServices/ExceptionMessages.resx
+++ b/src/Kingo.MicroServices/ExceptionMessages.resx
@@ -168,6 +168,9 @@
   <data name="ExpressionExtensions_UnsupportedExpression" xml:space="preserve">
     <value>Specified expression is not supported: '{0}'.</value>
   </data>
+  <data name="HostedEndpoint_EndpointAlreadyStarted" xml:space="preserve">
+    <value>Cannot start endpoint '{0}' because it has already been started. </value>
+  </data>
   <data name="Identifier_EmptyIdentifier" xml:space="preserve">
     <value>Cannot create an empty identifier.</value>
   </data>
