--- a/src/Kingo.MicroServices/ExceptionMessages.resx
+++ b/src/Kingo.MicroServices/ExceptionMessages.resx
@@ -132,7 +132,7 @@
   <data name="DateTimeSpan_TimeSpanZeroNotAllowed" xml:space="preserve">
     <value>'{0}' is not allowed to be zero.</value>
   </data>
-  <data name="HandleAsyncMethodEndpoint_InvalidMessageKindSpecified" xml:space="preserve">
+  <data name="EndpointAttribute_InvalidMessageKindSpecified" xml:space="preserve">
     <value>Invalid MessageKind ({0}) specified. Endpoints only support commands and events.</value>
   </data>
   <data name="HostedEndpoint_EndpointAlreadyStarted" xml:space="preserve">
@@ -143,6 +143,9 @@
   </data>
   <data name="MessageHandlerOrQueryInterface_InterfaceMethodNotFound" xml:space="preserve">
     <value>Could not find implementation of method '{0}.{1}(...)' on type '{3}'.</value>
+  </data>
+  <data name="MicroProcessorBuilder_InvalidProcessorType" xml:space="preserve">
+    <value>Type '{0}' cannot be used as a MicroProcessor. Please provider a non-abstract, non-generic MicroProcessor-type.</value>
   </data>
   <data name="ReadOnlyList_IndexOutOfRange" xml:space="preserve">
     <value>There is no element at index '{0}' (Count = {1}).</value>
