Implemented basic and recursive validation features.

--- a/src/Kingo.MicroServices.Tests/MicroServices/Contracts/SomeCommandErrorMessages.resx
+++ b/src/Kingo.MicroServices.Tests/MicroServices/Contracts/SomeCommandErrorMessages.resx
@@ -117,82 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="DataContractTest_InstanceNotValid" xml:space="preserve">
-    <value>Instance of type '{0}' was not valid; {1} validation error(s) occurred.</value>
-  </data>
-  <data name="DataContractTest_InstanceValid" xml:space="preserve">
-    <value>Instance of type '{0}' was valid; no validation errors occurred.</value>
-  </data>
-  <data name="EventStream_EventNotFound" xml:space="preserve">
-    <value>Event of type '{0}' not found at index '{1}': the EventStream contains only {2} event(s).</value>
-  </data>
-  <data name="EventStream_EventNotOfExpectedType" xml:space="preserve">
-    <value>Expected event of type '{0}' at index '{1}', but found event of type '{2}'.</value>
-  </data>
-  <data name="MessageHandlerResult_AssertionOfEventStreamFailed" xml:space="preserve">
-    <value>One or more assertions for the published events failed. See inner exception for details. </value>
-  </data>
-  <data name="MessageHandlerResult_StreamNotEmpty" xml:space="preserve">
-    <value>Expected an empty stream, but stream contains {0} event(s).</value>
-  </data>
-  <data name="MicroProcessorConfiguration_ProcessorAlreadyConfigured" xml:space="preserve">
-    <value>Cannot invoke '{0}' at this point: the processor has already been configured.</value>
-  </data>
-  <data name="MicroProcessorConfiguration_ProcessorNotYetConfigured" xml:space="preserve">
-    <value>Cannot invoke '{0}' at this point: the processor has not yet been configured.</value>
-  </data>
-  <data name="MicroProcessorConfiguration_ServicesAlreadyConfigured" xml:space="preserve">
-    <value>Cannot invoke '{0}' at this point: the service collection has already been configured.</value>
-  </data>
-  <data name="MicroProcessorTestContext_EventStreamNotFound" xml:space="preserve">
-    <value>Cannot retrieve the EventStream of '{0}' because its results haven't been saved in this context.</value>
-  </data>
-  <data name="MicroProcessorTestContext_TestAlreadyRun" xml:space="preserve">
-    <value>Cannot save the EventStream of '{0}' because a previous result of this test has already been saved.</value>
-  </data>
-  <data name="MicroProcessorTestResult_AssertionOfExceptionFailed" xml:space="preserve">
-    <value>One or more assertions for exception of type '{0}' failed. See inner exception for details.</value>
-  </data>
-  <data name="MicroProcessorTestResult_ExceptionNotOfExpectedType" xml:space="preserve">
-    <value>Expected an exception of type '{0}', but encountered an exception of type '{1}' instead.</value>
-  </data>
-  <data name="MicroProcessorTestResult_ExceptionNotThrown" xml:space="preserve">
-    <value>The expected exception of type '{0}' was not thrown.</value>
-  </data>
-  <data name="MicroProcessorTestResult_ExceptionThrown" xml:space="preserve">
-    <value>An unexpected exception of type '{0}' was thrown.</value>
-  </data>
-  <data name="MicroProcessorTestResult_InnerExceptionNull" xml:space="preserve">
-    <value>Exception of type '{0}' was expected to have an inner-exception of type '{1}', but did not have any inner-exception.</value>
-  </data>
-  <data name="MicroProcessorTestResult_ResultNotVerified" xml:space="preserve">
-    <value>Test failed by default because its result was not verified.</value>
-  </data>
-  <data name="NullTestResult_MissingResult" xml:space="preserve">
-    <value>Test '{0}' did not produce any result. Please verify that the processor provided as an argument to the WhenAsync-method has been used to handle a message or execute a query.</value>
-  </data>
-  <data name="RequestMessageTestBase_InvalidErrorCount" xml:space="preserve">
-    <value>The specified number of expected errors ({0}) is invalid. This number must be greater than or equal to 1.</value>
-  </data>
-  <data name="RequestMessageTestBase_MessageNotValid" xml:space="preserve">
-    <value>The specified message is not valid: {0}.</value>
-  </data>
-  <data name="RequestMessageTestBase_NoInstanceError" xml:space="preserve">
-    <value>An instance error was expected but the result of the validation contains no instance error.</value>
-  </data>
-  <data name="RequestMessageTestBase_NoMemberError" xml:space="preserve">
-    <value>An error for member '{0}' was expected, but the result contains no error for this member.</value>
-  </data>
-  <data name="RequestMessageTestBase_UnexpectedErrorCount" xml:space="preserve">
-    <value>The number of expected validation errors ({0}) does not match the actual amount of validation errors ({1}).</value>
-  </data>
-  <data name="RequestMessageTestBase_UnexpectedInstanceError" xml:space="preserve">
-    <value>The expected instance error ({0}) does not match the actual instance error ({1}) based on the type of comparison specified ({2}).</value>
-  </data>
-  <data name="RequestMessageTestBase_UnexpectedMemberError" xml:space="preserve">
-    <value>The expected error for member '{0}' ({1}) does not match the actual error ({2}) based on the type of comparison specified ({3}).</value>
-  </data>
-  <data name="UnexpectedExceptionResult_UnexpectedException" xml:space="preserve">
-    <value>Test '{0}' threw unexpected exception of type '{1}'. See inner exception for details.</value>
+  <data name="ChildMemberIsNotValid" xml:space="preserve">
+    <value>{0} is not valid.</value>
   </data>
 </root>
