--- a/src/Kingo.MicroServices/ExceptionMessages.resx
+++ b/src/Kingo.MicroServices/ExceptionMessages.resx
@@ -123,8 +123,17 @@
   <data name="Comparable_IncomparableType" xml:space="preserve">
     <value>The specified object of type '{0}' cannot be compared to instance of type '{1}'.</value>
   </data>
+  <data name="Constraint_UnsupportedType" xml:space="preserve">
+    <value>Value of type '{0}' could not be validated because the constraint expects an instance of type '{1}'.</value>
+  </data>
   <data name="Context_IllegalScopeStarted" xml:space="preserve">
     <value>Cannot start this scope because a more restrive scope is still active.</value>
+  </data>
+  <data name="DataContractExtensions_CircularReference" xml:space="preserve">
+    <value>Updating instance of type '{0}' to its latest version failed: version of type '{1}' introduced a circular update by returning an instance of type '{2}'.</value>
+  </data>
+  <data name="DataContractExtensions_InvalidCast" xml:space="preserve">
+    <value>Updating instance of type '{0}' to its latest version failed: could not convert latest version of type '{1}' to instance of type '{2}'.</value>
   </data>
   <data name="DateTimeSpan_InvalidTimeSpan" xml:space="preserve">
     <value>Invalid time span specified: [{0}, {1}].</value>
