--- a/src/MicroServices.Implementation.Endpoints.ServiceBus/ExceptionMessages.resx
+++ b/src/MicroServices.Implementation.Endpoints.ServiceBus/ExceptionMessages.resx
@@ -117,34 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AsyncMethodOperationStackTrace_IndexOutOfRange" xml:space="preserve">
-    <value>There is no element at index '{0}' (Count = {1}).</value>
-  </data>
-  <data name="AttributeProvider_AmbiguousAttributeMatch" xml:space="preserve">
-    <value>Cannot obtain single attribute of type '{0}' declared on '{1}' because multiple attributes are of type '{0}'.</value>
-  </data>
-  <data name="EndpointAttribute_InvalidMessageKindSpecified" xml:space="preserve">
-    <value>Invalid MessageKind ({0}) specified. Endpoints only support commands and events.</value>
-  </data>
-  <data name="MessageHandlerClass_CouldNotResolveMessageHandler" xml:space="preserve">
-    <value>Could not resolve message handler of type '{0}'.</value>
-  </data>
-  <data name="MessageHandlerOrQueryInterface_InterfaceMethodNotFound" xml:space="preserve">
-    <value>Could not find implementation of method '{0}.{1}(...)' on type '{3}'.</value>
-  </data>
-  <data name="MicroProcessorBuilder_InvalidProcessorType" xml:space="preserve">
-    <value>Type '{0}' cannot be used as a MicroProcessor. Please provider a non-abstract, non-generic MicroProcessor-type.</value>
-  </data>
-  <data name="MicroProcessorComponent_TypeNotSupported" xml:space="preserve">
-    <value>Cannot use instance of type '{0}' as a MicroProcessorComponent. Only non-abstract classes without generic parameters are supported.</value>
-  </data>
-  <data name="ServiceCollectionExtensions_InvalidComponentLifetime" xml:space="preserve">
-    <value>Component of type '{0}' could not be added because it is configured with an invalid lifetime ({1}).</value>
-  </data>
-  <data name="UnitOfWork_EnlistmentTimeout" xml:space="preserve">
-    <value>The operation to enlist to the current unit of work (as a result of modification of aggregate of type '{0}'), was aborted because execution time exceeded the specified timeout ({1}).</value>
-  </data>
-  <data name="UnitOfWork_InvalidMode" xml:space="preserve">
-    <value>The specified mode is invalid: {0}.</value>
+  <data name="HostedEndpoint_EndpointAlreadyStarted" xml:space="preserve">
+    <value>Cannot start endpoint '{0}' because it has already been started. </value>
   </data>
 </root>
